fix layout issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,14 +4,34 @@
 }
 
 .container {
-    min-height: 100%;
     position: relative;
 }
-
 
 .navbar-static-top {
     position: relative;
     z-index: 0;
+}
+
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#main {
+   min-height:100%;
+   position:relative;
+}
+#header {
+}
+#body {
+   padding:10px;
+   padding-bottom:90px;   /* Height of the footer */
+}
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
 }
 
 
@@ -383,18 +403,32 @@ Small Device Styles
  *    Trobz website footer 
  */
 
+@media (min-width: 1200px)
+#footer-last,
+#footer-container {
+max-width: 1170px;
+}
+@media (min-width: 992px)
+#footer-last,
+#footer-container {
+max-width: 970px;
+}
+@media (min-width: 768px)
+#footer-last,
+#footer-container {
+max-width: 750px;
+}
 
 #bottom-container {
     position:absolute;
     bottom:0;
     width: 100%;
-    height: 82px;
     background-color: #f7941e;
 }
 
 #footer-content {
     color: #ffba53;
-    width: 960px;
+    width: 1170px;
     height: 62px;
     background-image: url(../img/footer-glow.png);
     background-repeat: no-repeat;
@@ -413,7 +447,7 @@ Small Device Styles
 }
 
 #footer-last {
-    width: 960px;
+    width: 1170px;
     margin-top: 0px;
     border-top: 1px solid #ffba53;
     float: left;
